Add scene rendering

--- a/src/TwocTools.App/TwocTools.App.csproj
+++ b/src/TwocTools.App/TwocTools.App.csproj
@@ -16,4 +16,10 @@
     <PackageReference Include="NoahStolk.ImGuiGlfw" Version="0.7.0"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Content\**\*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
