Add tests for RNC unpack

--- a/src/TwocTools.Core.Tests/TwocTools.Core.Tests.csproj
+++ b/src/TwocTools.Core.Tests/TwocTools.Core.Tests.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\TwocTools.Core\TwocTools.Core.csproj"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Resources\**\*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
